--- a/IQcm/WebContent/css/index.css
+++ b/IQcm/WebContent/css/index.css
@@ -1,18 +1,48 @@
 .head {
-	background-color: grey;
+	background-color: #337ab7;
+	border-color: #2e6da4;
+	-webkit-border-bottom-right-radius: 20px;
+-webkit-border-bottom-left-radius: 20px;
+-moz-border-radius-bottomright: 20px;
+-moz-border-radius-bottomleft: 20px;
+border-bottom-right-radius: 20px;
+border-bottom-left-radius: 20px;
 }
 
 .qcm {
-	color: antiquewhite;
-	font-weight: bold;
+/* 	font-weight: bold; */
+	color: #fff;
+	text-decoration: none;
+}
+
+a.qcm:hover {
+/* 	font-weight: bold; */
+	color: #fff;
+	text-decoration: none;
 }
 
 .right {
 	text-align:right;
+	color:#fff;
+}
+
+.center {
+	text-align:center;
+	color:black;
 }
 
 .white {
 	color: white;
+	font-style: italic;
+}
+
+.brown {
+	color:brown;
+	font-style: italic
+}
+
+a.brown:hover {
+	color:brown;
 	font-style: italic;
 }
 
